# Retina_v1

./: .gitignore  README.md  pyproject.toml  requirements.txt
Debug/: InterStatistics.py  main_debug_notebook.ipynb
Retina/: InterStatistics.py  Label.py  LogWebexManager.py  MeetData.py  Pcap2Json.py  Retina.py  plotting.py  split_pcap.py
Retina/Debug/: Json2List_debug.py  LogWebexManager.py  Martino_log.py  Pcap2Json_debug.py  main_debug.py  main_debug_dena_final.py
Retina/Retina/: Json2List.py  Label.py  LogJitsiManager.py  LogWebexManager.py  Martino_log.py  MeetData.py  Pcap2Json.py  Retina.py  SeriesStats.py  Untitled.ipynb  cdf_webex.py  dict_flow_data_try.pickle  dict_merge_jitsi.pickle  json2stat.py  plotting.py  stream_to_df.pickle
Retina/Retina/.ipynb_checkpoints/: Martino_log-checkpoint.py  MeetData-checkpoint.py  Pcap2Json-checkpoint.py  Retina-checkpoint.py  Untitled-checkpoint.ipynb  json2stat-checkpoint.py
Retina/Retina/old_library/: plotting_static.py
Retina/old_library/: main_debug.py  plotting_static_gianluca.py
tests/: test_retina.py
