[tool.poetry]
name = "Retina"
version = "0.1.0"
description = ""
authors = ["GianlucaPoliTo <gianluca.perna@hotmail.it>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.4"
matplotlib = "^3.2.1"
argparse = "^1.4.0"
glob3 = "^0.0.1"
datetime = "^4.3"
scipy = "^1.4.1"
seaborn = "^0.10.1"
plotly = "^4.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
